2006-03-16
----------
* virbl was mispelled (Eddy Beliveau)

2006-01-15
----------
* released version 1.13
* add support for MxTreme mail gateway (Guido)
* improve support for drweb (Lev)
* improve support for MailScanner (Simon Hartl)
* improve support for AntiVir (Frank Urban)
* fix DST-switch timewarp in autumn (Parse::Syslog 1.09)

2005-10-16
----------
* released version 1.12
* sendmail fixes (Ben Lentz, R. Scott Baer)
* compatibility with rrdtool 1.2.0 and 1.2.1 (no --slope-mode)
* compatibility with SpamAssassin 3.1.0 (Matias Lopez Bergero)

2005-08-15
----------
* add support for newer Vexira versions (Alexandru Suchici)

2005-06-09
----------
* sendmail fixes (Immo Goltz)
* ensure that the correct RRA is always chosen
* nice -19 for mailgraph.pl in example init script (Alexander Norman)

2005-06-05
----------
* released version 1.11
* add support for clamsmtpd (Aaron Wolfe)
* add support for AVMilter (Stephan A. Klein)
* add chkconfig to init script (DanielC)
* add support for bogofilter (Erwan David)
* add support for Kaspersky anti SPAM (Igor Moskovko)
* add --virbl-is-spam (Cyriel de Grijs)
* detect as virus mails blocked by amavis by file-extension
* sendmail fixes (Alexander Bochmann)
* compatibility with RRDtool 1.2.x

2005-04-07
----------
* document the --logtypes

2005-01-24
----------
* recognize postfix/error bounces
* --daemon-rrd is now always respected (also without --daemon) 

2004-11-04
----------
* ignore per-recipient log entries of new amavisd-new versions

2004-10-21
----------
* released version 1.10
* dspam support (Nagilum)
* change CGI to use parameters instead of PATH_INFO, which not all web-servers support

2004-10-04
----------
* Avoid showing "milli-messages/s" on the y scale (R.M. Evers)
* Added --rbl-is-spam flag (David Gibbs)
* Sendmail fixes (David Gibbs)
* amavisd-new <= 20030616 (R.M. Evers)

2004-08-18
----------
* Sendmail fixes (David Gibbs)
* Line intead of area for rejects

2004-07-11
----------
* released version 1.9